<resources>
    <string name="app_name">Postulant App</string>
    <string name="user_image">UserImage</string>

    <!-- Login Activity -->
    <string name="username_hint">Usuario:</string>
    <string name="password_hint">Contraseña:</string>
    <string name="button_label">Ingresar</string>

    <!-- Menu Activity -->
    <string name="button_label2">Info. Postulante</string>
    <string name="button_label3">Nuevo</string>
    <string name="button_label4">Lista Postulantes</string>
    
    <!-- PostulantInfo Activity -->
    <string name="search_term_hint">DNI Postulante</string>
    <string name="button_search">Buscar</string>

    <string name="dni_label">DNI</string>
    <string name="name_label">Nombres</string>
    <string name="lastname_label">Apellidos</string>
    <string name="datebirth_label">Fecha nacimiento</string>
    <string name="school_label">Colegio</string>
    <string name="career_label">Carrera</string>

    <string name="response_labels">-</string>

    <!-- PostulantRegister Activity -->

    <string name="titleRegister">Registrar Postulante</string>
    <string name="button_register">Registrar</string>
    <string name="datebirth_hint">Fecha nacimiento xx/xx/xx</string>

    <!-- PostulantRegister Activity -->
    <string name="title_List_Postulant">Lista General de Postulantes</string>
</resources>
